# QT

./: .env.template  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  jest.config.js
backend/api/specs/: openapi.json
backend/quantum-api/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/quantum-api/app/: __init__.py  main.py  models.py
backend/quantum-api/app/algorithms/: __init__.py  grover.py  qft.py
backend/quantum-api/app/error_correction/: __init__.py  surface_code.py
backend/quantum-api/app/providers/: __init__.py  google.py  ibm.py  microsoft.py  rigetti.py
backend/quantum-api/app/security/: __init__.py  auth.py
backend/quantum-api/app/services/: __init__.py  openai_service.py
backend/quantum-api/tests/: test_chat_endpoints.py  test_openai_service.py
backend/vcs/: auth.py  main.py  models.py  repository.py  requirements.txt
backend/vcs/tests/: test_vcs.py
infrastructure/deployment/: docker-compose.yml
infrastructure/kubernetes/: deployment.yaml
quantum-ide/: .dockerignore  .env  Dockerfile  index.html  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml
quantum-ide/src/: App.tsx
quantum-ide/src/components/ChatUI/: ChatUI.tsx
quantum-ide/src/components/CircuitEditor/: CircuitEditor.tsx
quantum-ide/src/components/CodeEditor/: CodeEditor.tsx
quantum-ide/src/components/DebugPanel/: DebugPanel.tsx
quantum-ide/src/lib/: api.ts  errors.ts  fileSystem.ts  gitService.ts  simulator.ts
quantum-ide/src/styles/: editor.css
quantum-ide/src/types/: quantum.ts
(+15 files in other folders)
