[tool.poetry]
name = "quantum-api"
version = "0.1.0"
description = "Quantum Development Platform API"
authors = ["Devin AI"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = "^2.10.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
qiskit = "^1.3.1"
pyquil = "^4.15.0"
cirq = "^1.4.1"
qsharp = "^1.11.1"
python-dotenv = "^1.0.1"
openai = "^1.58.1"
aiofiles = "23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
